added sort logic for different sort requirements to homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header id="site-header">
   <div class="container">
-    <h1 class="site-title"><a [routerLink]="['/']">Home</a></h1>
+    <h1 class="site-title"><a [routerLink]="['/']"></a></h1>
   </div>
 </header>
 
