--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -2,7 +2,7 @@ th.tablesort-sortable {
   cursor: pointer;
 }
 
-.table .tablesort-sortable:after{
+table .tablesort-sortable:after{
   content:"";
   float:right;
   margin-top:7px;
@@ -14,15 +14,15 @@ th.tablesort-sortable {
   border-bottom:4px solid #000;
 }
 
-.table .tablesort-desc:after{
+table .tablesort-desc:after{
   border-top:4px solid #000;
   border-bottom:none;
 }
 
-.table .tablesort-asc,table .tablesort-desc{
+table .tablesort-asc,table .tablesort-desc{
   background-color:rgba(141, 192, 219, 0.25);
 }
 
-.table .tablesort-sortable:hover:after, table .tablesort-asc:after, table .tablesort-desc:after {
+table .tablesort-sortable:hover:after, table .tablesort-asc:after, table .tablesort-desc:after {
   visibility:visible;
 }
