--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,23 +1,24 @@
 <form (ngSubmit)="submitForm(form)" #form="ngForm" novalidate [ngClass]="{'is-processing': processing}">
   
   <div class="field" [ngClass]="{'has-error': feedbackEnabled && searchQueryField.errors}">
-    <input type="text" placeholder="Search your music here" name="searchQuery" [(ngModel)]="searchQuery" #searchQueryField="ngModel" required [disabled]="processing"/>
+    <input type="text" placeholder="Search your music here" name="searchQuery" [(ngModel)]="searchQuery" #searchQueryField="ngModel" />
     <div *ngIf="feedbackEnabled && searchQueryField.errors">
       <p *ngIf="searchQueryField.errors.required" class="validation"></p>
     </div>
   </div>
 
   <div class="field submit">
-    <button type="submit" [disabled]="processing">Search</button>
+    <button type="submit">Search</button>
+  </div>
+
+  <div class="no results" *ngIf="!results">
+      <p>Please try again -there were no results.</p>
   </div>
 </form>
 
-<div class="no results" *ngIf="!results">
-    <p>Please try again -there were no results.</p>
-</div>
-
 <div *ngIf="results">
   <div class="nav-sort">
+    <h3>Sort by:</h3>
     <a (click)="sortBy('time')">Time</a>
     <a (click)="sortBy('price')">Price</a>
     <a (click)="sortBy('genre')">Genre</a>
