--- a/src/app/pages/player-page/player-page.component.html
+++ b/src/app/pages/player-page/player-page.component.html
@@ -1,6 +1,7 @@
+<div class="container">
+  <ng-container *ngIf="result">
+    <img src="{{ result.artworkUrl100 }}" alt="">
+  </ng-container>
 
-
-<audio controls>
-    <source src="https://audio-ssl.itunes.apple.com/apple-assets-us-std-000001/Music7/v4/c3/11/ae/c311aef0-be7b-35de-193a-b55629d2cb14/mzaf_538320974834743269.plus.aac.p.m4a" type="audio/mpeg">
-  </audio>
+</div>
   
