--- a/src/app/pages/player-page/player-page.component.scss
+++ b/src/app/pages/player-page/player-page.component.scss
@@ -1,7 +1,67 @@
-audio {
-  position: absolute;
-  top: 10px; 
-  right: 10px;
-  width: 190px;
-  opacity: 0.6;
+// audio {
+//   position: absolute;
+//   top: 10px; 
+//   right: 10px;
+//   width: 190px;
+//   opacity: 0.6;
+// }
+
+#img-album {
+  // display: block;
+  // content: "";
+  // height: 0;
+  // position: absolute;
+  width: 268px;
+  height: 268px;
+  border-radius: 6px;
+  border: .5px solid rgba(0,0,0,.1);
+  z-index: 1;
+  text-align: center;
 }
+
+#player{
+  padding-top: 10px;
+}
+
+.l-colum {
+  display: inline-block;
+}
+
+.product-header {
+  padding-bottom: 15px;
+}
+
+h4 {
+  color: #da0f47;
+  font-size: 18px;
+  line-height: 1.2223;
+  font-weight: 400;
+  letter-spacing: .02em;
+}
+
+.table {
+  border-collapse: collapse;
+}
+
+.table-head {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+#playlist td:first-child {
+  padding-right: 15px;
+}
+
+td {
+  height: 50px;
+  vertical-align: middle;
+}
+
+.duration {
+  padding-left: 22px;
+}
+
+#buttons-player {
+  text-align: center;
+}
+
+.btn {font-size: 20px;}
