In player component, user is redirected to homepage on refresh, included media query in SCSS

--- a/src/app/pages/player-page/player-page.component.html
+++ b/src/app/pages/player-page/player-page.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <ng-container *ngIf="result">
-    <img src="{{ result.artworkUrl100 }}" alt="">
+    <img src="{{ result.artworkUrl100 }}" alt="Cover artwork">
   </ng-container>
-
 </div>
   
