--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -32,6 +32,11 @@
       width: 200px;
     }
   }
+  @media (min-width: 1000px) {
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+    }
   .card-body {
     width: 100%;
     position: relative;
@@ -74,6 +79,7 @@
       left: 10px;
     }
   }
+}
   a {
     text-decoration: none;
   }
