--- a/src/app/pages/player-page/player-page.component.html
+++ b/src/app/pages/player-page/player-page.component.html
@@ -1,6 +1,51 @@
-<div class="container">
-  <ng-container *ngIf="result">
-    <img src="{{ result.artworkUrl100 }}" alt="Cover artwork">
-  </ng-container>
-</div>
+    <div class="l-colum">
+        <div class="product-header">
+          <img id="img-album" src="" alt="">
+          <h3 id="trackName"></h3>
+          <h4 id="artistName"></h4>
+        <div>
+          <span id="genreName"></span>
+          <span id="relaseDate"></span>
+        </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 col-md-5 col-lg-5" id="albumplayer">
+          <div id="player">
+            <audio id="player">
+              <source src="" type="audio/mpeg" id="source-track">
+            </audio>
+            <div id="buttons-player">
+              <button type="button" class="btn btn-light" (click)="stop()">&#x23f9;</button>
+              <button type="button" class="btn btn-light" (click)="prev()">&#x23ea;</button>
+              <button type="button" class="btn btn-light" (click)="playPause()">&#x23ef;</button>
+              <button type="button" class="btn btn-light" (click)="next()">&#x23e9;</button>
+            </div>
+          </div>
+        </div>
+        </div>
+        <table class="table">
+          <thead class="table-head">
+            <tr>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="list-search" id="playlist" *ngFor="let result of results.results, let i = index">
+              <td>{{ i + 1 }}</td>
+              <td id="{{ i }}"><a (click)="loadSong(i)">{{ result.trackName }}</a></td>
+              <td class="duration">{{ result.trackTimeMillis | date:'m:ss' }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <footer id="site-footer">
+    <ul class="social-media">
+      <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/images/instagram.png" ></a></li>
+      <li><a href="https://facebook.com/" target="_blank"><img src="../assets/images/facebook.png" ></a></li>
+    </ul>
+  </footer>
   
