still not mobile, but more responsive

--- a/src/app/pages/player-page/player-page.component.html
+++ b/src/app/pages/player-page/player-page.component.html
@@ -1,3 +1,4 @@
+    <h2>Play your tune here:</h2>
     <div class="l-colum">
         <div class="product-header">
           <img id="img-album" src="" alt="">
