--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -32,11 +32,7 @@
       width: 200px;
     }
   }
-  @media (min-width: 768px) {
-    .container {
-      max-width: 728px;
-      margin: 0 auto;
-    }
+
   .card-body {
     width: 100%;
     position: relative;
@@ -83,4 +79,34 @@
   a {
     text-decoration: none;
   }
+
+  @media (min-width: 768px) {
+    .container {
+      max-width: 728px;
+      margin: 0 auto;
+    }
+
+    .card:nth-child(3n+1):nth-last-child(-n+3) ~ .record {
+      margin-left:calc(30% * .100);
+      margin-right: auto;
+  }
+}
+
+@media (min-width: 400px) {
+  .container {
+    margin: 0 20px;
+  }
+  
+}
+
+@media (min-width: 1000px) {
+  .container {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+
+  .card:nth-child(4n+1):nth-last-child(-n+4) ~ .record {
+    margin-left:calc(12% * .100);
+    margin-right: auto;
+ }
 }
