--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -11,7 +11,7 @@
     <button type="submit">Search</button>
   </div>
 
-  <div class="no results" *ngIf="!results">
+  <div class="no results" *ngIf="!isLoading && !results">
       <p>Please try again -there were no results.</p>
   </div>
 </form>
