--- a/src/app/pages/player-page/player-page.component.html
+++ b/src/app/pages/player-page/player-page.component.html
@@ -1,29 +1,32 @@
-    <h2>Play your tune here:</h2>
-    <div class="l-colum">
-        <div class="product-header">
-          <img id="img-album" src="" alt="">
+  <div class="container">
+    <div class="cover">
+      <img id="img-album" src="" alt="">
+    </div>   
+    
+    <div class="header">      
+        <h2>Play your tune here:</h2>
           <h3 id="trackName"></h3>
           <h4 id="artistName"></h4>
-        <div>
           <span id="genreName"></span>
           <span id="relaseDate"></span>
+    </div>
+
+    <div class="albumplayer">
+        <audio id="player">
+          <source src="" type="audio/mpeg" id="source-track">
+        </audio>
+
+        <div id="buttons-player">
+          <button type="button" class="btn stop-button" (click)="stop()"><i class="fas fa-stop"></i></button>
+          <button type="button" class="btn back-button" (click)="prev()"><i class=<i class="fas fa-backward"></i></button>
+          <button type="button" class="btn play-pause-button" (click)="playPause()"><i class="fas fa-play"></i></button>
+          <button type="button" class="btn next-button" (click)="next()"><i class="fas fa-forward"></i></button>
         </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-5 col-md-5 col-lg-5" id="albumplayer">
-          <div id="player">
-            <audio id="player">
-              <source src="" type="audio/mpeg" id="source-track">
-            </audio>
-            <div id="buttons-player">
-              <button type="button" class="btn btn-light" (click)="stop()">&#x23f9;</button>
-              <button type="button" class="btn btn-light" (click)="prev()">&#x23ea;</button>
-              <button type="button" class="btn btn-light" (click)="playPause()">&#x23ef;</button>
-              <button type="button" class="btn btn-light" (click)="next()">&#x23e9;</button>
-            </div>
-          </div>
-        </div>
-        </div>
+    </div>
+  </div>
+
+  <div class="container-main">
+    <div class="table">
         <table class="table">
           <thead class="table-head">
             <tr>
@@ -31,7 +34,8 @@
               <th></th>
               <th></th>
             </tr>
-          </thead>
+          </thead> 
+
           <tbody>
             <tr class="list-search" id="playlist" *ngFor="let result of results.results, let i = index">
               <td>{{ i + 1 }}</td>
@@ -39,14 +43,20 @@
               <td class="duration">{{ result.trackTimeMillis | date:'m:ss' }}</td>
             </tr>
           </tbody>
-        </table>
-      </div>
+        </table> 
     </div>
   </div>
+
   <footer id="site-footer">
     <ul class="social-media">
       <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/images/instagram.png" ></a></li>
       <li><a href="https://facebook.com/" target="_blank"><img src="../assets/images/facebook.png" ></a></li>
     </ul>
-  </footer>
+  </footer> 
+
   
+
+   
+     
+       
+    
