--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,7 +1,7 @@
 button {
   text-decoration: none;
   color: white ;
-  background-color: #eeccee;
+  background-color: #b7b7b7;
   border: 4px solid #FF5959;
   font-weight: bold;
   border-radius: 5px;
