--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -7,7 +7,7 @@
   background: #ececec;
   margin-bottom: 20px;
   width: 100%;
-  height: 200px;
+  min-height: 200px;
   display: flex;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -85,18 +85,12 @@
       max-width: 728px;
       margin: 0 auto;
     }
-
-    .card:nth-child(3n+1):nth-last-child(-n+3) ~ .record {
-      margin-left:calc(30% * .100);
-      margin-right: auto;
   }
-}
 
 @media (min-width: 400px) {
   .container {
     margin: 0 20px;
-  }
-  
+  } 
 }
 
 @media (min-width: 1000px) {
@@ -104,9 +98,4 @@
     max-width: 960px;
     margin: 0 auto;
   }
-
-  .card:nth-child(4n+1):nth-last-child(-n+4) ~ .record {
-    margin-left:calc(12% * .100);
-    margin-right: auto;
- }
 }
